--- a/README.me
+++ b/README.me
@@ -1,5 +1,4 @@
-Компиляция
-----------
+#Компиляция#
     Для Visual Studio: все файлы cpp и h добавить в проект и запустить пострение.
     Для других компиляторов не тестировалось.
 _
