--- a/README.me
+++ b/README.me
@@ -1,8 +1,10 @@
-# Компиляция
+## Компиляция
+
     Для Visual Studio: все файлы cpp и h добавить в проект и запустить пострение.
     Для других компиляторов не тестировалось.
-_
-Реализованные эффекты
+
+## Реализованные эффекты
+
     Нечёткие тени 
     Нечёткие отражения
     Отбрасывание тени на другие объекты  
