--- a/README.me
+++ b/README.me
@@ -1,14 +1,13 @@
-
 ## Компиляция
 
-    Для Visual Studio: все файлы cpp и h добавить в проект и запустить пострение.
-    Для других компиляторов не тестировалось.
+* Для Visual Studio: все файлы cpp и h добавить в проект и запустить пострение.
+* Для других компиляторов не тестировалось.
 
 ## Реализованные эффекты
 
-    Нечёткие тени 
-    Нечёткие отражения
-    Отбрасывание тени на другие объекты  
-    Зеркальные грани  
-    Антиалиасинг  
-    Объёмные или протяжённые источники освещения
+* Нечёткие тени 
+* Нечёткие отражения
+* Отбрасывание тени на другие объекты  
+* Зеркальные грани  
+* Антиалиасинг  
+* Объёмные или протяжённые источники освещения
